--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,30 @@ services:
   
   api:
     build: .
+    image: lucy
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
     volumes:
       - .:/app
+
+  worker:
+    restart: always
+    image: lucy
+    depends_on:
+      - redis
+    volumes:
+      - ./:/app
+    environment:
+      CELERY_BROKER_URL: redis://redis:6379/0
+    command: celery -A config.celery worker -l info
+
+  redis:
+    restart: always
+    image: redis:5.0
+    volumes:
+      - redis-volume:/data/
+    command: redis-server --appendonly yes
+
+volumes:
+  redis-volume:
