--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+celery==5.3.4
 Django==4.2.2
+django-celery-results==2.5.1
 django-environ==0.10.0
 djangorestframework==3.14.0
 django-extensions==3.2.3
 django-allauth==0.57.0
+python-telegram-bot==v20.6
+redis==4.6.0
